recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:2: error: not found: value s
  while(s=!){avance(length:Double)
        ^Tree:4: error: reassignment to val
            length=length*shrink
                  ^Tree:5: error: not found: value s
            s=s-1}
            ^