recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  while(s=!){avance(length:Double)
            right(angle:Double)
            length=length*shrink
            s=s-1}
}